# triz-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci-and-publish.yml
data/patents/: battery_patents.json
data/triz/: matrix.json  parameters.json  principles.json
docs/: use-cases-semiconductor.md
docs/specs/: 2026-03-14-triz-ai-design.md  2026-04-13-self-evolution-design.md  2026-04-16-env-var-interpolation-design.md
docs/superpowers/plans/: 2026-04-13-self-evolution.md  2026-04-16-env-var-interpolation.md
scripts/: probe_responses_api.py
src/triz_ai/: __init__.py  cli.py  config.py  tools.py
src/triz_ai/data/: evolution_trends.json  separation_principles.json  standard_solutions.json
src/triz_ai/engine/: analyzer.py  ariz.py  classifier.py  evaluator.py  function_analysis.py  generator.py  physical.py  router.py  su_field.py  trends.py  trimming.py
src/triz_ai/evolution/: pipeline.py  review.py  self_evolve.py
src/triz_ai/knowledge/: contradictions.py  matrix_builder.py  parameters.py  principles.py  separation.py  solutions.py  trends.py
src/triz_ai/llm/: client.py  prompts.py
src/triz_ai/patents/: __init__.py  ingest.py  repository.py  store.py  vector.py
tests/: test_ariz.py  test_config.py  test_config_interpolation.py  test_embedding_dimensions.py  test_engine.py  test_evolution.py  test_function_analysis.py  test_ingest.py  test_knowledge.py  test_llm_client.py  test_matrix_builder.py  test_parameter_evolution.py  test_physical.py  test_repository.py  test_router.py  test_self_evolve.py  test_store.py  test_su_field.py  test_tools.py  test_trends.py  test_trimming.py  test_vector.py
tests/fixtures/sample_patents/: batch_patents.json  battery_thermal.txt  ev_motor_cooling.txt  solid_state_electrolyte.txt
